# study_dashboard

./: .gitignore  README.md
.github/workflows/: build-deploy.yaml  ci.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  data_collector.py  github_client.py  main.py  models.py  scheduler.py
backend/app/routers/: matrix.py  members.py  milestones.py  stats.py  system.py
backend/tests/: conftest.py  test_data_collector.py  test_routers.py
charts/ps-dashboard/: Chart.yaml  values-prod.yaml  values.yaml
charts/ps-dashboard/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  secret.yaml
docs/: PRD.md
docs/argocd/: application.yaml
frontend/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/components/: LastUpdated.vue  MilestoneSelector.vue  PlatformBadge.vue  ScoreBoard.vue  StatsCards.vue  StatusCell.vue
frontend/src/composables/: useMatrix.ts  useMembers.ts  useMilestones.ts
frontend/src/lib/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: dashboard.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  MemberView.vue  StatsView.vue
